bugs squashed

--- a/src/styles/piata.css
+++ b/src/styles/piata.css
@@ -1,5 +1,7 @@
   div.alert {
     font-weight: bold;
+} div#acct-list > span.acct_listed {
+	display: block;
 } div#acct-list > span.acct_listed > * {
 	display: inline;
 	margin-left: 10px;
